# bspline_interpolation_c

./: README.md
src/: CMakeLists.txt  bspline_main.c  splinter.c  splinter_transform.c  splinter_transform.h
src/iio/: CMakeLists.txt  FindOPENEXR.cmake  iio.c
